data/collection/fixes/descriptions/java/JDK-7042623
If the following program is compiled:

@interface Defined2 {}

@Undefined1(@Defined2)
class Test1{} 


Javac reports the following error:

/home/maurizio/Desktop/TestX.java:3: error: cannot find symbol
@Undefined1(a = @Defined2)
 ^
  symbol: class Undefined1

The last line of the diagnostic is missing (error count) indicating an internal javac error. If the same program is compiled with -XDdev, the following stack trace is shown:

An exception has occurred in the compiler (1.7.0-internal). Please file a bug at the Java Developer Connection (http://java.sun.com/webapps/bugreport)  after checking the Bug Parade for duplicates. Include your program and the following diagnostic in your report.  Thank you.
java.lang.NullPointerException
        at com.sun.tools.javac.comp.Check.validateAnnotation(Check.java:2387)
        at com.sun.tools.javac.comp.Check$1AnnotationValidator.visitAnnotation(Check.java:2245)
        at com.sun.tools.javac.tree.JCTree$JCAnnotation.accept(JCTree.java:2004)
        at com.sun.tools.javac.tree.TreeScanner.scan(TreeScanner.java:49)
        at com.sun.tools.javac.tree.TreeScanner.visitAssign(TreeScanner.java:221)
        at com.sun.tools.javac.tree.JCTree$JCAssign.accept(JCTree.java:1466)
        at com.sun.tools.javac.tree.TreeScanner.scan(TreeScanner.java:49)
        at com.sun.tools.javac.tree.TreeScanner.scan(TreeScanner.java:57)
        at com.sun.tools.javac.tree.TreeScanner.visitAnnotation(TreeScanner.java:300)
        at com.sun.tools.javac.comp.Check$1AnnotationValidator.visitAnnotation(Check.java:2243)
        at com.sun.tools.javac.tree.JCTree$JCAnnotation.accept(JCTree.java:2004)
        at com.sun.tools.javac.comp.Check.validateAnnotationTree(Check.java:2248)
        at com.sun.tools.javac.comp.Check.validateAnnotation(Check.java:2306)
        at com.sun.tools.javac.comp.Check.validateAnnotations(Check.java:2300)
        at com.sun.tools.javac.comp.Attr.attribClassBody(Attr.java:3170)
        at com.sun.tools.javac.comp.Attr.attribClass(Attr.java:3149)
        at com.sun.tools.javac.comp.Attr.attribClass(Attr.java:3085)
        at com.sun.tools.javac.comp.Attr.attrib(Attr.java:3059)
        at com.sun.tools.javac.main.JavaCompiler.attribute(JavaCompiler.java:1182)
        at com.sun.tools.javac.main.JavaCompiler.compile2(JavaCompiler.java:870)
        at com.sun.tools.javac.main.JavaCompiler.compile(JavaCompiler.java:829)
        at com.sun.tools.javac.main.Main.compile(Main.java:417)
        at com.sun.tools.javac.main.Main.compile(Main.java:331)
        at com.sun.tools.javac.main.Main.compile(Main.java:322)
        at com.sun.tools.javac.Main.compile(Main.java:76)
        at com.sun.tools.javac.Main.main(Main.java:61)
Java Result: 4
